Fix blurry text in response.

--- a/src/index.css
+++ b/src/index.css
@@ -132,5 +132,6 @@ All colors MUST be HSL.
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    transform: translateZ(0);
   }
 }
